@startuml Prinzo

skinparam linetype ortho

class Agencia {
  - vehiculos: Lista<Vehiculo>
  - clientes: Lista<Cliente>
  + agregarVehiculo(vehiculo: Vehiculo): void
  + agregarCliente(cliente: Cliente): void
  + obtenerVehiculosAlquilados(): Lista<Vehiculo>
  + obtenerClientesConAlquileres(): Lista<Cliente>
}

class Vehiculo {
  - marca: String
  - modelo: String
  - patente: String
  + getMarca(): String
  + getModelo(): String
  + getPatente(): String
}

class Cliente {
  - nombre: String
  - apellido: String
  - dni: String
  - fechaNacimiento: Fecha
  - correoElectronico: String
  - alquileres: Lista<Alquiler>
  + getNombre(): String
  + getApellido(): String
  + getDNI(): String
  + getFechaNacimiento(): Fecha
  + getCorreoElectronico(): String
}

class Alquiler {
  - vehiculo: Vehiculo
  - cliente: Cliente
  - dias: int
  - importe: float
  + getVehiculo(): Vehiculo
  + getCliente(): Cliente
  + getDias(): int
  + getImporte(): float
}

Agencia "1..*" o--- "1" Vehiculo : tiene
Agencia "1..*" o--- "1" Cliente : tiene
Cliente "1" ---* "1..*" Alquiler : alquila
Vehiculo "1" ---* "1..*" Alquiler : es alquilado

@enduml
